--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-OPENAI_API_KEY=your-openai-key-here
-SERPER_API_KEY=your-serper-key-here
-# Add more API keys below as needed (e.g., Telegram, Google, etc.)
+OPENAI_API_KEY="your OPENAI_API_KEY here"
+OPENAI_MODEL_NAME="your OPENAI_MODEL_NAME here" # e.g. "gpt-4o-mini"
+SERPER_API_KEY="your SERPER_API_KEY here"
+TELEGRAM_BOT_TOKEN="your TELEGRAM_BOT_TOKEN here"
+TELEGRAM_CHAT_ID="your TELEGRAM_CHAT_ID here"
